--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,14 @@ body {
     margin: 0;
 }
 
+.grid-container{
+	  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
 .latest-news-section {
-    background-color: #011e29;
-    color: white;
+    background-color: #ffffff;
+    color: black;
     padding: 20px;
     width: 80%;
     margin: 20px auto;
@@ -39,7 +44,7 @@ body {
 }
 
 .latest-news-section ul li a {
-    color: white;
+    color: black;
     text-decoration: none;
 }
 
